force-app/main/default/objects/PIR__c/PIR__c.object-meta.xml
<CustomObject>
    <label>PIR</label>
    <nameField>
        <displayFormat>PIR-{0000}</displayFormat>
        <label>PIR Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIRs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>