force-app/main/default/objects/PIR__c/fields/Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Customer_Code__c</fullName>
    <formula>Customer_Name__r.Customer_Code_SAP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Code</label>
    <type>Text</type>
</CustomField>