force-app/main/default/objects/PIR__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PIRs</relationshipLabel>
    <relationshipName>PIRs_v1</relationshipName>
    <type>Lookup</type>
</CustomField>