force-app/main/default/objects/PIR__c/fields/Product_Code_HALB__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_HALB__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code (HALB)</label>
    <type>Text</type>
</CustomField>