force-app/main/default/objects/PIR__c/fields/Quantity_in_KG__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_KG__c</fullName>
    <label>Quantity(in KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>