force-app/main/default/objects/PIR__c/fields/Submit_To_SAP__c.field-meta.xml
<CustomField>
    <fullName>Submit_To_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit To SAP</label>
    <type>Checkbox</type>
</CustomField>