force-app/main/default/objects/PIR__c/fields/Synced_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if this PIR record is synced successfully to SAP</inlineHelpText>
    <label>Synced to SAP</label>
    <type>Checkbox</type>
</CustomField>