force-app/main/default/objects/PIR__c/validationRules/material_description_cannot_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>material_description_cannot_be_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Product__c )</errorConditionFormula>
    <errorMessage>Material Description cannot be null</errorMessage>
</ValidationRule>