force-app/main/default/objects/PIR__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_Code__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Synced_to_SAP__c</columns>
    <columns>Submit_To_SAP__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>